--- a/config.json
+++ b/config.json
@@ -63,5 +63,10 @@
         "name": "一笼一蒸",
         "good": "馄饨烧卖荷叶饭都不错",
         "bad": "今天不想走路"
+    },
+    {
+        "name": "佳家乐",
+        "good": "食堂，方便不用等",
+        "bad": "旁边的牛肉汤它不香吗"
     }
 ]
